force-app/main/default/objects/Project__c/fields/Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>Percent_Complete__c</fullName>
    <formula>IF(
    Sum_Total_ToDos__c = 0,
    0,
    (Sum_Total_ToDos__c - Sum_Incomplete_ToDos__c) / Sum_Total_ToDos__c
)</formula>
    <label>Percent Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>