force-app/main/default/objects/Project__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(
    ROUND(Percent_Complete__c * 100, 0) = 0,
    &quot;Not Started&quot;,
    IF(
        ROUND(Percent_Complete__c * 100, 0) = 100,
        &quot;Complete&quot;,
        &quot;In Progress&quot;
    )
)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>