force-app/main/default/objects/Project__c/fields/Sum_Total_ToDos__c.field-meta.xml
<CustomField>
    <fullName>Sum_Total_ToDos__c</fullName>
    <label>Sum Total ToDos</label>
    <summarizedField>Milestone__c.Total_ToDos__c</summarizedField>
    <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>